[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# Hatchling is just one build tool. Others include setuptools, Flit, PDM
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[project]
name = "lxg_world"
version = "0.0.1"
authors = [
  { name="Nathan Walsh", email="nwalsh@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nwalshgit/lxg_world"
"Bug Tracker" = "https://github.com/nwalshgit/lxg_world/issues"